--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.denisyeyson">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,10 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PC01_ESPINOZA_PONCIANO_DENIS">
         <activity
-            android:name=".IntentImplicitoActivity"
-            android:exported="true" />
-        <activity
-            android:name=".IntentImplicito"
+            android:name=".BienvenidoActivity"
             android:exported="true" />
         <activity
             android:name=".IntentExplicitoActivity"
